[package]
name = "application"
version = "0.0.1"
edition = "2021"
# for the mockall feature in domain, should not be in production builds
resolver = "2"

[lib]
doctest = false

[dependencies]
domain = { workspace = true }

chrono = { workspace = true }
async-trait = { workspace = true }
mockall_double = { workspace = true }

[dev-dependencies]
domain = { workspace = true, features = ["mockall"] }
mockall = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
