[package]
name = "main"
version = "0.0.1"
edition = "2024"

# doctest = false

[dependencies]
domain = { workspace = true }
application = { workspace = true }
rest = { workspace = true }
persistence = { workspace = true }

tokio = { workspace = true, features = ["macros"] }
salvo = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }

[dev-dependencies]
chrono = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
