[package]
name = "adapters-inbound-rest"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
domain = { version = "0.0.1", path = "../../domain" }
application = { version = "0.0.1", path = "../../application" }
salvo = { version = "0.71", features = ["test"] }

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1", features = ["macros"] }
