[package]
name = "adapters-inbound-rest"
version = "0.0.1"
edition = "2024"

[lib]
doctest = false

[dependencies]
domain = { workspace = true }
application = { workspace = true }

salvo = { workspace = true, features = ["test"] }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
