[package]
name = "adapters-inbound-web"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
domain = { version = "0.0.1", path = "../../domain" }
application = { version = "0.0.1", path = "../../application" }
salvo = "0.37"
once_cell = "1"

[dev-dependencies]
mockall = "0.11"
tokio = { version = "1", features = ["macros"] }
