[package]
name = "adapters-outbound-persistence"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
domain = { workspace = true }
application = { workspace = true }

chrono = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
async-trait = { workspace = true }
log = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
